<resources>
    <string name="app_name">GARRULOUS</string>
    <string name="app_motto">Simple Messaging</string>
    <string name="action_settings">Settings</string>
    <!-- activity titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_garrulous">Garrulous</string>
    <!-- need to take this out -->
    <string name="title_activity_message">Message</string>
    <string name="title_search">Search</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_register">Register</string>
    <!-- text titles -->
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_register">Register</string>
    <string name="text_go">Go</string>
    <string name="text_location">Location</string>
    <string name="text_age">Age</string>
    <string name="text_about">About</string>
    <string name="text_update">Update</string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="username">Username</string>
    <string name="title_activity_messages">Messages</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_find_user">Find Someone</string>

</resources>
