<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="xyz.garrulous.garrulous.RegisterActivity"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/registerTextView"
        android:layout_marginTop="41dp"
        android:textColor="#ffffff"
        android:textSize="42dp"
        android:textStyle="bold|italic"
        android:fontFamily="Helvetica"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_first_name"
        android:id="@+id/firstNameTextName"
        android:textSize="28dp"
        android:layout_marginTop="43dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/registerTextView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/firstNameTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_last_name"
        android:id="@+id/lastNameTextView"
        android:textSize="28dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/editText2"
        android:layout_alignRight="@+id/firstNameTextName"
        android:layout_alignEnd="@+id/firstNameTextName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameEditText"
        android:layout_below="@+id/lastNameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:id="@+id/textView"
        android:textSize="28dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/lastNameEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:id="@+id/passwordTextView"
        android:textSize="28dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/passwordTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_register"
        android:id="@+id/button2"
        android:background="#FFCD28"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
