<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_profile"
    tools:context="xyz.garrulous.garrulous.EditProfileActivity"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_first_name"
            android:textColor="@color/garrulousWhite"
            android:textSize="20sp"
            android:id="@+id/firstNameTextView"
            android:gravity="center"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameEditTextProfile"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/garrulousWhite"
            android:layout_below="@id/firstNameTextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_last_name"
            android:textColor="@color/garrulousWhite"
            android:textSize="20sp"
            android:id="@+id/lastNameTextView"
            android:gravity="center"
            android:layout_below="@+id/firstNameEditTextProfile"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameEditTextProfile"
            android:layout_below="@+id/lastNameTextView"
            android:textColor="@color/garrulousWhite"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/garrulousWhite"
            android:textSize="20sp"
            android:id="@+id/passwordTextView"
            android:gravity="center"
            android:layout_below="@+id/lastNameEditTextProfile"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/passwordTextView"
            android:textColor="@color/garrulousWhite"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_update"
            android:id="@+id/updateProfileButton"
            android:textColor="@color/garrulousWhite"
            android:background="@color/garrulousOrange"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:foregroundGravity="bottom|center"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</RelativeLayout>
